@@ -1,82 +1,79 @@
-/*
 package com.cheolhyeon.diary.app.config;
 
+import com.cheolhyeon.diary.auth.jwt.JwtFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtFilter jwtFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // CSRF 비활성화 (API 서버이므로)
-            .csrf(AbstractHttpConfigurer::disable)
-            // CORS 설정
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            // OAuth2 Client 비활성화 (수동으로 카카오 API 호출하므로)
-            .oauth2Client(AbstractHttpConfigurer::disable)
-            // 세션 관리 설정 (STATELESS로 설정하여 JWT 토큰 기반 인증)
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            // 요청별 권한 설정
-            .authorizeHttpRequests(authz -> authz
-                // 공개 엔드포인트 (카카오 로그인 관련)
-                .requestMatchers("/login/oauth2/code/kakao").permitAll()
-                .requestMatchers("/login").permitAll()
-                .requestMatchers("/api/auth/**").permitAll()
-                // 카카오 OAuth2 리다이렉트 URL (설정값에 따라 동적 처리)
-                .requestMatchers("/oauth2/code/kakao").permitAll()
-                // Spring Boot 기본 에러 페이지
-                .requestMatchers("/error").permitAll()
-                // 브라우저 자동 요청 경로들 (Chrome DevTools, favicon 등)
-                .requestMatchers("/.well-known/**").permitAll()
-                .requestMatchers("/favicon.ico").permitAll()
-                .requestMatchers("/robots.txt").permitAll()
-                // 헬스체크 엔드포인트
-                .requestMatchers("/actuator/health").permitAll()
-                // Swagger UI (개발 환경에서만)
-                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                // 기타 모든 API 요청은 인증 필요
-                .requestMatchers("/api/**").authenticated()
-                // 나머지 요청은 허용
-                .anyRequest().permitAll()
-            )
-            // 예외 처리 설정
-            .exceptionHandling(ex -> ex
-                .authenticationEntryPoint((request, response, authException) -> {
+                // CSRF 비활성화 (JWT 토큰 기반 인증이므로)
+                .csrf(AbstractHttpConfigurer::disable)
+                // CORS 설정
+                .cors(Customizer.withDefaults()) // ★ CORS 적용 (아래 Bean 사용)
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .formLogin(AbstractHttpConfigurer::disable)
+                .logout(AbstractHttpConfigurer::disable)
+                // 세션 관리 설정 (STATELESS로 설정하여 JWT 토큰 기반 인증)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                // JWT 필터 추가
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+                // 요청별 권한 설정
+                .authorizeHttpRequests(authz -> authz
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // preflight 허용
+                        .requestMatchers("/*.html").permitAll()
+                        .requestMatchers("/login/**").permitAll()
+                        .requestMatchers("/auth/refresh").permitAll() // refresh 엔드포인트 허용
+                        .requestMatchers("/js/**").permitAll() // JavaScript 파일 허용
+                        .requestMatchers("/css/**").permitAll() // CSS 파일 허용
+                        .requestMatchers("/favicon.ico").permitAll() // 파비콘 허용
+                        .requestMatchers("/*.js").permitAll() // 루트 JS 파일 허용
+                        .requestMatchers("/*.css").permitAll() // 루트 CSS 파일 허용
+                        .requestMatchers("/*.map").permitAll() // 루트 소스맵 파일 허용
+                        .requestMatchers("/").permitAll()
+                        .requestMatchers("/api/**").permitAll())
+                .exceptionHandling(ex -> ex.authenticationEntryPoint((request, response, authException) -> {
                     response.setStatus(401);
                     response.setContentType("application/json;charset=UTF-8");
-                    response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"인증이 필요합니다.\"}");
-                })
-                .accessDeniedHandler((request, response, accessDeniedException) -> {
-                    response.setStatus(403);
-                    response.setContentType("application/json;charset=UTF-8");
-                    response.getWriter().write("{\"error\":\"Forbidden\",\"message\":\"접근 권한이 없습니다.\"}");
-                })
-            );
+                    response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"서비스 이용 불가. 재 로그인 하세요\"}");
+                }));
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // 프론트엔드 서버 허용
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000"));
+        // 허용할 Origin 설정 (같은 컴퓨터, 다른 포트)
+        configuration.setAllowedOriginPatterns(List.of(
+                "localhost:3000"
+        ));
         // 허용할 HTTP 메서드
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        // 허용할 헤더
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        // 허용할 헤더 (Authorization 포함)
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        // 노출할 헤더 (클라이언트에서 접근 가능한 헤더)
+        configuration.setExposedHeaders(List.of("Authorization"));
         // 인증 정보 포함 허용 (쿠키, Authorization 헤더 등)
         configuration.setAllowCredentials(true);
         // preflight 요청 캐시 시간
@@ -86,4 +83,3 @@ public class SecurityConfig {
         return source;
     }
 }
-*/
